# trivial-stuff

./: README.md
.docs/: Lightcycles Collection.md
Bitmap Displayer/: README.md  bitmap.cpp  bitmap.h  main.cpp  print.cpp  print.h
Lightcycles/: README.md  main.cpp  text.h
Snake/: README.md  main.cpp  text.h
bitmap-displayer/: README.md  bitmap.cpp  main.cpp  print.cpp  print.h
console-minesweeper/: README.md  docs.h  main.cpp
docs/: Gemfile  README.md  _config.yml  about.md  hcm.md  hpc.md  lcc.md  lightcycles-collection.md  main.md  minesweeper-help.md  pong-help.md
lightcycles/: Lightcycles Infinite Launch.py  Lightcycles.py
lightcycles-cmd/: text.h
lightcyclesplusplus/: CMakeLists.txt  Help.txt  README.md  colours.h  directions.h  game.cpp  game.h  keymap.h  log.cpp  log.h  main.cpp  player.cpp  player.h  struct.h  text.cpp  text.h
pong-clone/: Pong Clone.pyw
snake/: README.md  text.h
wiki-hangman/: hangman.py
